# dummy-transaction-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/transaction_generator/: __init__.py  data_model.py  generator.py
