[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-generator"
version = "0.1.0"
description = "Synthetic transaction data generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "numpy==2.1.3",
    "polars==1.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]